--- a/did-aptos/Move.toml
+++ b/did-aptos/Move.toml
@@ -3,10 +3,10 @@ name = "did"
 version = "0.0.1"
 
 [addresses]
-my_addr = "0x9520f02c7701a13924603daf354fc391"
+my_addr = "_"
 std = "0x1"
 aptos_framework = "0x1"
 
 [dependencies]
-MoveStdlib = { local = "../../aptos-core/aptos-move/framework/move-stdlib" }
-AptosFramework = { local = "../../aptos-core/aptos-move/framework/aptos-framework"}
+MoveStdlib = { git = "https://github.com/aptos-labs/aptos-core.git", subdir="aptos-move/framework/move-stdlib/", rev="aptos-cli-v0.3.4" }
+AptosFramework = { git = "https://github.com/aptos-labs/aptos-core.git", subdir="aptos-move/framework/aptos-framework/", rev="aptos-cli-v0.3.4" }
