--- a/did-aptos/Move.toml
+++ b/did-aptos/Move.toml
@@ -6,6 +6,7 @@ version = "0.0.1"
 my_addr = "_"
 std = "0x1"
 aptos_framework = "0x1"
+chain_id = "0x1"
 
 [dependencies]
 MoveStdlib = { git = "https://github.com/aptos-labs/aptos-core.git", subdir="aptos-move/framework/move-stdlib/", rev="aptos-cli-v1.0.0" }
