--- a/docs/package.json
+++ b/docs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aptos-docs",
+  "name": "rmud-docs",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -31,7 +31,8 @@
     "rehype-katex": "5",
     "remark-math": "3",
     "unist-util-visit": "4.1.0",
-    "unist-util-visit-children": "2.0.0"
+    "unist-util-visit-children": "2.0.0",
+    "vercel": "^34.2.6"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.1.0",
