--- a/did-aptos/Move.toml
+++ b/did-aptos/Move.toml
@@ -12,20 +12,21 @@ aptos_framework = "0x1"
 # chain_id = "0x2" # for testnet
 chain_id = "0x7e" # for movement mainnet, 126 = 7e
 
+
 [dependencies.AptosFramework]
 git = "https://github.com/aptos-labs/aptos-core.git"
-rev = "release-v.1.14"
+rev = "mainnet"
 subdir = "aptos-move/framework/aptos-framework"
 
 
 [dependencies.MoveStdlib]
 git = "https://github.com/aptos-labs/aptos-core.git"
-rev = "release-v.1.14"
+rev = "mainnet"
 subdir = "aptos-move/framework/move-stdlib"
 
 [dependencies.AptosTokenObjects]
 git = "https://github.com/aptos-labs/aptos-core.git"
-rev = "release-v.1.14"
+rev = "mainnet"
 subdir = "aptos-move/framework/aptos-token-objects"
 
 # [dependencies]
