--- a/did-aptos/Move.toml
+++ b/did-aptos/Move.toml
@@ -12,21 +12,18 @@ aptos_framework = "0x1"
 chain_id = "0x2" # for testnet
 # chain_id = "0x46" # for randomnet
 
-[dependencies.AptosFramework]
-git = "https://github.com/aptos-labs/aptos-core.git"
-rev = "release-v.1.14"
-subdir = "aptos-move/framework/aptos-framework"
-
+[dependencies]
+  AptosFramework = { git = "https://github.com/aptos-labs/aptos-framework.git", subdir = "aptos-framework/", rev = "mainnet" }
 
 [dependencies.MoveStdlib]
-git = "https://github.com/aptos-labs/aptos-core.git"
-rev = "release-v.1.14"
-subdir = "aptos-move/framework/move-stdlib"
+git = "https://github.com/aptos-labs/aptos-framework.git"
+rev = "mainnet"
+subdir = "move-stdlib"
 
 [dependencies.AptosTokenObjects]
-git = "https://github.com/aptos-labs/aptos-core.git"
-rev = "release-v.1.14"
-subdir = "aptos-move/framework/aptos-token-objects"
+git = "https://github.com/aptos-labs/aptos-framework.git"
+rev = "mainnet"
+subdir = "aptos-token-objects"
 
 # [dependencies]
 # MoveStdlib = { git = "https://github.com/aptos-labs/aptos-core.git", subdir="aptos-move/framework/move-stdlib/"}
