--- a/manager-dapp/package.json
+++ b/manager-dapp/package.json
@@ -15,9 +15,12 @@
     "@radix-ui/react-toast": "^1.2.6",
     "@razorlabs/wallet-kit": "^0.5.0",
     "@shadcn/ui": "^0.0.4",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.4.7",
     "got": "^14.4.6",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
