--- a/manager-dapp/package.json
+++ b/manager-dapp/package.json
@@ -13,7 +13,7 @@
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.6",
-    "@razorlabs/wallet-kit": "^0.5.0",
+    "@razorlabs/razorkit": "^1.0.10",
     "@shadcn/ui": "^0.0.4",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
